--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,user-scalable=no">
   <title>Sortowanie Jesiennych Skarbów</title>
   <link rel="stylesheet" href="styles.css">
 </head>
