--- a/index.html
+++ b/index.html
@@ -1,45 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,user-scalable=no">
-  <title>Sortowanie Jesiennych Skarbów</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Puzzle</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <main id="game">
-    <header class="topbar">
-      <div class="title">
-        🍁 Sortowanie Jesiennych Skarbów
-      </div>
-      <div class="hud">
-        <div class="score">Punkty: <span id="score">0</span>/10</div>
-        <button id="restartBtn" class="ghost">Restart</button>
-      </div>
-    </header>
+<div class="puzzle-container">
+    <h1>Puzzle</h1>
+    <a href="#" target="_blank" id="sourceImageLink">
+        <img class="puzzle-source-image" src="" alt="Puzzle image">
+    </a>
+    <div class="puzzle-board" id="puzzleBoard"></div>
+    <button class="reset-button" onclick="resetGame()">Reset</button>
+</div>
 
-    <section class="game-wrap">
-      <div id="playfield" class="playfield" aria-label="Pole gry"></div>
-
-      <aside id="bins" class="bins" aria-label="Kosze na skarby">
-        <!-- Kosze są tworzone dynamicznie przez JS -->
-      </aside>
-    </section>
-  </main>
-
-  <!-- Modal wygranej -->
-  <div id="winModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="winTitle">
-    <div class="modal-card">
-      <h2 id="winTitle">Brawo! Ukończyłeś grę 🎉</h2>
-      <p>Zebrałeś 10 punktów!</p>
-      <div class="trophy">
-        <div class="trophy-icon" id="trophyIcon" aria-hidden="true"></div>
-        <div class="trophy-caption">Twoje trofeum</div>
-      </div>
-      <button id="playAgain" class="primary">Zagraj ponownie</button>
+<!-- Win Modal Popup -->
+<div id="winModal" class="modal-overlay" style="display: none;">
+    <div class="modal-content">
+        <h2>🎉 Gratulacje! 🎉</h2>
+        <p>Ułożyłeś puzzle!</p>
+        <button class="modal-button" onclick="resetGameWithNewImage()">Zagraj ponownie</button>
     </div>
-  </div>
-
-  <script src="game.js"></script>
+</div>
+<script src="game.js"></script>
 </body>
 </html>
+
