--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
 <div class="puzzle-container">
     <h1>Puzzle</h1>
-    <a href="#" target="_blank" id="sourceImageLink">
-        <img class="puzzle-source-image" src="" alt="Puzzle image">
-    </a>
-    <div class="puzzle-board" id="puzzleBoard"></div>
+    <div class="puzzle-content">
+        <a href="#" target="_blank" id="sourceImageLink" class="puzzle-image-wrapper">
+            <img class="puzzle-source-image" src="" alt="Puzzle image">
+        </a>
+        <div class="puzzle-board" id="puzzleBoard"></div>
+    </div>
     <button class="reset-button" onclick="resetGame()">Reset</button>
 </div>
 
