--- a/index.html
+++ b/index.html
@@ -3,30 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Puzzle</title>
+    <title>Świąteczna Gra w Kubki</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="puzzle-container">
-    <h1>Puzzle</h1>
-    <div class="puzzle-content">
-        <a href="#" target="_blank" id="sourceImageLink" class="puzzle-image-wrapper">
-            <img class="puzzle-source-image" src="" alt="Puzzle image">
-        </a>
-        <div class="puzzle-board" id="puzzleBoard"></div>
-    </div>
-    <button class="reset-button" onclick="resetGame()">Reset</button>
+<!-- Animated background decorations -->
+<div class="snowflakes-container">
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
 </div>
 
-<!-- Win Modal Popup -->
-<div id="winModal" class="modal-overlay" style="display: none;">
+<div class="game-container">
+    <div class="top-decoration">
+        <span class="decoration-light">🎄</span>
+        <span class="decoration-light">✨</span>
+        <span class="decoration-light">🎅</span>
+        <span class="decoration-light">⛄</span>
+        <span class="decoration-light">🔔</span>
+    </div>
+    <h1>🎄 Znajdź Świąteczną Kulkę! 🎄</h1>
+    <div class="game-content">
+        <div class="instruction-text" id="instructionText">Obserwuj kubki uważnie!</div>
+        <div class="cups-container" id="cupsContainer">
+            <div class="cup" data-index="0">
+                <div class="cup-top"></div>
+                <div class="cup-body"></div>
+                <div class="ball" id="ball0"></div>
+            </div>
+            <div class="cup" data-index="1">
+                <div class="cup-top"></div>
+                <div class="cup-body"></div>
+                <div class="ball" id="ball1"></div>
+            </div>
+            <div class="cup" data-index="2">
+                <div class="cup-top"></div>
+                <div class="cup-body"></div>
+                <div class="ball" id="ball2"></div>
+            </div>
+        </div>
+        <button class="play-button" id="playButton" onclick="startGame()">Zagraj</button>
+    </div>
+    <div class="bottom-decoration">
+        <span class="decoration-light">🔔</span>
+        <span class="decoration-light">⛄</span>
+        <span class="decoration-light">🎅</span>
+        <span class="decoration-light">✨</span>
+        <span class="decoration-light">🎄</span>
+    </div>
+</div>
+
+<!-- Result Modal Popup -->
+<div id="resultModal" class="modal-overlay" style="display: none;">
     <div class="modal-content">
-        <h2>🎉 Gratulacje! 🎉</h2>
-        <p>Ułożyłeś puzzle!</p>
-        <button class="modal-button" onclick="resetGameWithNewImage()">Zagraj ponownie</button>
+        <h2 id="resultTitle">🎉 Gratulacje! 🎉</h2>
+        <p id="resultMessage">Znalazłeś świąteczną kulkę!</p>
+        <button class="modal-button" onclick="resetGame()">Zagraj ponownie</button>
     </div>
 </div>
 <script src="game.js"></script>
 </body>
 </html>
-
