Add hint functionality to Hangman: Introduced hints tied to words, button to display hints, and CSS styling for hint display and button states.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
 	<div id="pojemnik">
 		<div id="plansza"></div>
+		<div id="wskazowka"></div>
 		<div id="szubienica">
 			<img src="img/s0.jpg" alt="" />
 		</div>
+		<button id="przycisk-wskazowka" onclick="pokazWskazowke()">Podpowiedź</button>
 		<div id="alfabet"></div>
 		<div style="clear:both;"></div>
 	</div>
