replace game with bubble shooter game

--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
-<!DOCTYPE HTML>
-<html lang="pl">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<title>Szubienica</title>
-
-	<link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="style.css" type="text/css" />
-	<script src="szubienica.js"></script>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Bubble Shooter Game</title>
+    <link rel="stylesheet" href="bubble-game.css">
 </head>
 <body>
+    <div class="game-container">
+        <div class="game-header">
+            <div class="score-board">
+                <span class="label">WYNIK</span>
+                <span class="score-value" id="score">0</span>
+            </div>
+            <button class="restart-btn" id="restartBtn">NOWA GRA</button>
+        </div>
 
-	<div id="pojemnik">
-		<div id="plansza"></div>
-		<div id="wskazowka"></div>
-		<div id="szubienica">
-			<img src="img/s0.jpg" alt="" />
-		</div>
-		<button id="przycisk-wskazowka" onclick="pokazWskazowke()">Podpowiedź</button>
-		<div id="alfabet"></div>
-		<div style="clear:both;"></div>
-	</div>
+        <canvas id="gameCanvas"></canvas>
 
+        <div class="game-over-screen" id="gameOverScreen">
+            <div class="game-over-content">
+                <h1 id="gameOverTitle">Koniec Gry!</h1>
+                <p class="final-score">Wynik: <span id="finalScore">0</span></p>
+                <button class="play-again-btn" id="playAgainBtn">ZAGRAJ JESZCZE RAZ</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="bubble-game.js"></script>
 </body>
 </html>
